[package]
name = "rackgen"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.3"
anyhow = "^1.0.33"
regex = "^1.4.1"
elfkit = "^0.0.7"
sharedlib = "^7.0.0"